--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ai-voice-agent",
   "version": "1.0.0",
   "description": "AI Voice Agent with Deepgram STT/TTS and LLM integration",
-  "main": "src/app.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node --watch src/app.js",
+    "start": "node app.js",
+    "dev": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
