--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 node_modules/
 package-lock.json
 
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.venv/
+venv/
+
 # Environment variables (contains API keys)
 .env
 .env.local
